<resources>
    <string name="app_name">Gamer Shop</string>

    <string name="open">Abrir menu</string>
    <string name="close">Fechar Menu</string>

    <string name="home">Principal</string>
    <string name="jogos">Jogos</string>
    <string name="plataformas">Plataformas</string>
    <string name="maisVendidos">Mais Vendidos</string>
    <string name="verTodos">Ver Todos</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="carrinho">Carrinho</string>
    <string name="finalizarCompra">Finalizar Compra</string>
    <string name="conta">Sua conta</string>
    <string name="procurar">Procurar</string>
    <string name="subtotal">Subtotal</string>
    <string name="pedido">Pedido</string>
    <string name="valortotal">Valor Total</string>
    <string name="data">Data</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="trocarSenha">Trocar Senha</string>
    <string name="sobre">Sobre</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="naoTemCadastro">Não tem cadastro?</string>
    <string name="Cadastre_se">Cadastre-se</string>
    <string name="efetuarCadastro">Efetuar cadastro</string>
    <string name="nome">Nome</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="criarCadastro">Criar cadastro</string>
    <string name="salvarAlteracoes">Salvar Alterações</string>
    <string name="senhaAtual">Senha atual</string>
    <string name="novaSenha">Nova senha</string>
    <string name="pedidos">Pedidos:</string>
    <string name="apiResposta">Revise as informações!</string>
    <string name="apiRespostaFalha">Não foi possivel se conectar a rede!</string>
    <string name="sair">Sair</string>
    <string name="emEstoque">Em estoque</string>
    <string name="ultimasUnidades">Últimas unidades</string>
    <string name="indisponível">Indisponível</string>
    <string name="problemas">Problemas</string>
    <string name="bemVindo">Bem Vindo!</string>
    <string name="camposObrigatorios">Preencha todos os campos!</string>
    <string name="usuarioCriado">Usuario criado</string>
    <string name="atualizadoSucesso">Atualizado com sucesso!</string>
    <string name="loginExpirou">Seu acesso expirou, faça um novo acesso</string>
    <string name="carrinhoAdd">Adicionado ao carrinho!</string>
    <string name="carrinhoItemRemovido">Item removido!</string>
    <string name="pedidoFinalizado">"Muito obrigado! Número do pedido: "</string>
    <string name="addCarrinho">Adicionar ao Carrinho</string>
    <string name="produto">Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor">Valor</string>
    <string name="acao">Ação</string>
    <string name="verItens">Ver Itens</string>
    <string name="itensPedido">Itens do Pedido</string>
    <string name="appInfo">Informações sobre o aplicativo</string>
    <string name="cursoSobre">Curso: Sistemas para Internet - 4º Semestre</string>
    <string name="projetoIntegradorSobre">Projeto Integrador 4: Sistema Web Modularizavel</string>
    <string name="projetoSobre">Projeto: E-commerce mobile de jogos</string>
    <string name="alunoSobre">Aluno: Emerson Costa Santos</string>
    <string name="sloganApp">Bem-vindo ao próximo nível!</string>
    <string name="carregando">Carregando...</string>
</resources>