<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".TrocarSenhaActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/trocarSenha"
                android:textColor="#FFB74D"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etTrocarSenhaAntigaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/senhaAtual"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etTrocarSenhaNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/novaSenha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etTrocarSenhaConfirmarNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/confirmarSenha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnTrocarSenhaSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="#FFB74D"
                android:text="@string/salvarAlteracoes"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>