<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/produto" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantidade"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valor"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvItemPedidoProduto"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nome"
                android:textColor="#3F51B5" />

            <TextView
                android:id="@+id/tvItemPedidoQuantidade"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvItemPedidoValor"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$0,0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvItemPedidoSubTotal"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$0,0"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>